--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@fortawesome/free-regular-svg-icons": "^7.1.0",
         "@fortawesome/free-solid-svg-icons": "^7.1.0",
         "@fortawesome/react-fontawesome": "^3.1.0",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^3.0.4",
         "lucide-react": "^0.553.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
